syntax = "proto3";

option go_package = "./proto;proto";

// protoc --go_out=. --go-grpc_out=. proto/book.proto
package proto;

service Book {
    rpc GetBook(BookRequest) returns (BookResponse) {}
    rpc ListBooks(BookRequest) returns (stream BookResponse) {}
    rpc MultiGetBook(stream BookRequest) returns (BookResponse) {}
    rpc MultiListBooks(stream BookRequest) returns (stream BookResponse) {}
}

message BookRequest {
    string chapter = 1;
}

message BookResponse {
    string title = 1;
    string description = 2;
    string author = 3;
    string publisher = 4;
    string year = 5;
}